crates/openrouter-macros/tests/ui/lookup__static_variant_unknown.stderr
error: unknown OpenRouter model `moonshotai/kimi-k2-0905:free`
 --> tests/ui/lookup__static_variant_unknown.rs:3:37
  |
3 | const MODEL: &str = model_supports!("moonshotai/kimi-k2-0905:free", param::tools);
  |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
